--- a/doc/ccsd.tex
+++ b/doc/ccsd.tex
@@ -97,9 +97,20 @@ They are:
     F_{mn}^I&=h_{mn}+\sum_l(2g_{mnll}-g_{mlln})=h_{mn}+\sum_lL_{mnll}
 \end{align}
 
-The T1-transformed $L$ and $F^I$ matrices (${\tilde L}$ and ${\tilde F}^I$) can be obtained using the T1-transformed $h$ and $g$ elements or transforming these matrices.
-The $F^I$ is transformed as the $h$ matrix, eq.~\ref{eq:h_transformation}, and $L$ as the $g$ matrix, eq.~\ref{eq:g_transformation}.
-((Which is the fastest way? Probably use the $h$ and $g$ transformed elements, this way we don't need matrices multiplication.))
+Note that $u$ has the same symmetry as $t$:
+\begin{equation}
+  u_{ji}^{ba}=2t_{ji}^{ba}-t_{ij}^{ba}=2t_{ij}^{ab}-t_{ji}^{ab}=u_{ij}^{ab},
+\end{equation}
+$L$ the same as $g$ and $F^I$ the same as $h$.
+
+In section~\ref{sec:ccsd_t1_trans} we intorduce the T1-transformation for $h$ and $g$.
+The transformed intermediary matrices (${\tilde L}$ and ${\tilde F}^I$) can be obtained in tow ways:
+calculating the elements using the T1-transformed $h$ and $g$ matrices;
+or transforming the $F^I$ and $L$ matrices.
+The $F^I$ matrix is transformed as the $h$ matrix, following the eq.~\ref{eq:h_transformation},
+and $L$ as the $g$ matrix, following eq.~\ref{eq:g_transformation}.
+In the follow sections the equations do not depends on isolated $h$ elements only $F^I$,
+so the $\tilde h$ matrix is not necessary and we need, starting from the $F^I$ matrix, only to calculate the $\tilde F^I$ one.
 
 \subsection{Energy}
 \hypertarget{sec:ccsd_energy}{}
@@ -113,7 +124,7 @@ The $F^I$ is transformed as the $h$ matrix, eq.~\ref{eq:h_transformation}, and $
   \end{split}
 \end{equation}
 
-Note that $L_{iajb}={\tilde L}_{iajb}$, so in the implementation both matrices can be used. 
+Due to the next section result, $L_{iajb}={\tilde L}_{iajb}$ (eq.~\ref{eq:t1g_iajb}), so in the implementation both matrices can be used. 
 
 \subsection{T1-Transformed MO Integrals}
 \hypertarget{sec:ccsd_t1_trans}{}
@@ -136,10 +147,10 @@ The one-electron T1-transformed molecular orbital integral can be writen as
 \end{equation}
 However, there is no need to construct the $\mathbf{t}_1$ matrix if we split the last equation in four cases:
 \begin{align}
-  {\tilde h}_{ij}&=h_{ij}+\sum_ch_{ic}t_{j}^{c}\\
-  {\tilde h}_{ai}&=h_{ai}-\sum_kt_{k}^{a}h_{ki}+\sum_ch_{ac}t_{i}^{c}-\sum_{ck}t_{k}^{a}h_{kc}t_{i}^{c}\\
-  {\tilde h}_{ia}&=h_{ia}\\
-  {\tilde h}_{ab}&=h_{ab}-\sum_kt_{k}^{a}h_{kb}
+  \htil{ij}&=\h{ij}+\sum_c\h{ic}t_{j}^{c}\\
+  \htil{ai}&=\h{ai}-\sum_kt_{k}^{a}\h{ki}+\sum_c\h{ac}t_{i}^{c}-\sum_{ck}t_{k}^{a}\h{kc}t_{i}^{c}\\
+  \htil{ia}&=\h{ia}\\
+  \htil{ab}&=\h{ab}-\sum_kt_{k}^{a}\h{kb}
 \end{align}
 
 For the two-electron molecular orbital integral we have a similar expression:
@@ -203,23 +214,23 @@ Last, for the equation \ref{eq:t1g_iajb} there is no transformation and the valu
 \end{equation}
 where
 \begin{align}
-  \Omega_i^{a(A1)}&=\orbsum{ckd}u_{ki}^{cd}\gtil{adkc}\\
-  \Omega_i^{a(B1)}&=-\orbsum{ckl}u_{ki}^{ac}\gtil{kilc}\\
-  \Omega_i^{a(C1)}&=\orbsum{ck}u_{ik}^{ac}{\tilde F}_{kc}^{I}\\
-  \Omega_i^{a(D1)}&={\tilde F}_{ai}^{I}
+  \Omega_i^{a(A1)}&=\orbsum{ckd}\uampl{ki}{cd}\gtil{adkc}\\
+  \Omega_i^{a(B1)}&=-\orbsum{ckl}\uampl{ki}{ac}\gtil{kilc}\\
+  \Omega_i^{a(C1)}&=\orbsum{ck}\uampl{ik}{ac}\Ftil{kc}=\orbsum{ck}\uampl{ik}{ac}\F{kc}\\
+  \Omega_i^{a(D1)}&=\Ftil{ai}
 \end{align}
 
-Other way to open this equation is
-
-\begin{equation}
-  \begin{split}
-    \Omega_i^a&={\tilde h}_{ai}+\sum_k\{2\gtil{aikk}-\gtil{akki}\\
-    &+\sum_c[(2\ampl{ik}{ac}-\ampl{ki}{ac}){\tilde h}_{kc}+(2\ampl{ik}{ac}-\ampl{ki}{ac})\sum_l(2\gtil{kcll}-\gtil{kllc})\\
-    &+\sum_d(2\ampl{ki}{cd}-\ampl{ik}{cd})\gtil{adkc}-\sum_l(2\ampl{kl}{ac}-\ampl{lk}{ac})\gtil{kilc}]\}\\
-    &={\tilde h}_{ai}+\orbsum{k}\{{\tilde L}_{aikk}+\sum_c[u_{ik}^{ac}{\tilde h}_{kc}+u_{ik}^{ac}\sum_l({\tilde L}_{kcll})+\sum_d(u_{ki}^{cd}\gtil{adkc})\\
-      &-\sum_l(u_{kl}^{ac}\gtil{kilc})]\}
-   \end{split}
-\end{equation}
+%Other way to open this equation is
+%
+%\begin{equation}
+%  \begin{split}
+%    \Omega_i^a&={\tilde h}_{ai}+\sum_k\{2\gtil{aikk}-\gtil{akki}\\
+%    &+\sum_c[(2\ampl{ik}{ac}-\ampl{ki}{ac}){\tilde h}_{kc}+(2\ampl{ik}{ac}-\ampl{ki}{ac})\sum_l(2\gtil{kcll}-\gtil{kllc})\\
+%    &+\sum_d(2\ampl{ki}{cd}-\ampl{ik}{cd})\gtil{adkc}-\sum_l(2\ampl{kl}{ac}-\ampl{lk}{ac})\gtil{kilc}]\}\\
+%    &={\tilde h}_{ai}+\orbsum{k}\{{\tilde L}_{aikk}+\sum_c[u_{ik}^{ac}{\tilde h}_{kc}+u_{ik}^{ac}\sum_l({\tilde L}_{kcll})+\sum_d(u_{ki}^{cd}\gtil{adkc})\\
+%      &-\sum_l(u_{kl}^{ac}\gtil{kilc})]\}
+%   \end{split}
+%\end{equation}
 
 \subsubsection{Doubles}
 \hypertarget{sec:ccsd_res_doub}{}
@@ -227,35 +238,53 @@ Other way to open this equation is
 
 \begin{equation}
   \begin{split}
+    \label{eq:omega_double}
     \Omega_{ij}^{ab}=\Omega_{ij}^{ab(A2)}+\Omega_{ij}^{ab(B2)}+\Omega_{ij}^{ab(C2)}+\Omega_{ji}^{ba(C2)}+\Omega_{ij}^{ab(D2)}+\Omega_{ji}^{ba(D2)}+\Omega_{ij}^{ab(E2)}+\Omega_{ji}^{ba(E2)}
   \end{split}
 \end{equation}
 where
 \begin{align}
-  \Omega_{ij}^{ab(A2)}&=\gtil{aibj}+\orbsum{cd}\ampl{ij}{cd}\gtil{acbd}\\
+  \Omega_{ij}^{ab(A2)}&=\gtil{aibj}+\orbsum{cd}\ampl{ij}{cd}\gtil{acbd}\label{eq:omega_A2}\\
   \Omega_{ij}^{ab(B2)}&=\orbsum{kl}\ampl{kl}{ab}\bigg(\gtil{kilj}+\orbsum{cd}\ampl{ij}{cd}\gtil{kcld}\bigg)\\
   \Omega_{ij}^{ab(C2)}&=-\frac{1}{2}\orbsum{ck}\ampl{kj}{bc}\bigg(\gtil{kiac}-\frac{1}{2}\orbsum{dl}\ampl{li}{ad}\gtil{kdlc}\bigg)-\orbsum{ck}\ampl{ki}{bc}\bigg(\gtil{kjac}-\frac{1}{2}\orbsum{dl}\ampl{lj}{ad}\gtil{kdlc}\bigg)\\
-  \Omega_{ij}^{ab(D2)}&=\frac{1}{2}\orbsum{ck}u_{jk}^{bc}\bigg({\tilde L}_{aikc}+\frac{1}{2}\orbsum{dl}u_{il}^{ad}{\tilde L}_{ldkc}\bigg)\\
-  \Omega_{ij}^{ab(E2)}&=\orbsum{c}\ampl{ij}{ac}\bigg({\tilde F}_{bc}^{I}-\orbsum{dkl}u_{ki}^{bd}\gtil{ldkc}\bigg)-\orbsum{k}\ampl{ik}{ab}\bigg({\tilde F}_{kj}^{I}+\orbsum{cdl}u_{lj}^{cd}\gtil{kdlc}\bigg)
+  \Omega_{ij}^{ab(D2)}&=\frac{1}{2}\orbsum{ck}\uampl{jk}{bc}\bigg(\Ltil{aikc}+\frac{1}{2}\orbsum{dl}\uampl{il}{ad}\Ltil{ldkc}\bigg)\\
+  \Omega_{ij}^{ab(E2)}&=\orbsum{c}\ampl{ij}{ac}\bigg(\Ftil{bc}-\orbsum{dkl}\uampl{ki}{bd}\gtil{ldkc}\bigg)-\orbsum{k}\ampl{ik}{ab}\bigg(\Ftil{kj}+\orbsum{cdl}\uampl{lj}{cd}\gtil{kdlc}\bigg)
 \end{align}
 
 
-Other way to open this equation is
+%Other way to open this equation is
+%
+%\begin{equation}
+%  \begin{split}
+%    \Omega_{ij}^{ab}&=\gtil{aibj}\\%
+%    &+\orbsum{c}[\ampl{ij}{ac}({\tilde h}_{bc}+\orbsum{k}2\gtil{bckk}-\gtil{bkkc})+\ampl{ji}{bc}({\tilde h}_{ac}+\orbsum{k}2\gtil{ackk}-\gtil{akkc})+\sum_d\ampl{ij}{cd}\gtil{acbd}]\\
+%    &+\orbsum{k}[\ampl{ik}{ab}({\tilde h}_{kj}+\orbsum{l}2\gtil{kjll}-\gtil{kllj})+\ampl{jk}{ba}({\tilde h}_{ki}+\orbsum{l}2\gtil{kill}-\gtil{klli})+\sum_l\ampl{kl}{ab}\gtil{kilj}]\\
+%    &+\orbsum{c}\orbsum{k}\{-2^{-1}\ampl{kj}{bc}\gtil{kiac}-\ampl{ki}{bc}\gtil{kjac}-2^{-1}\ampl{ki}{ac}\gtil{kjbc}-\ampl{kj}{ac}\gtil{kibc}\\
+%    &+(\ampl{jk}{bc}-2^{-1}\ampl{kj}{bc})(2\gtil{aikc}-\gtil{acki})+(\ampl{ik}{ac}-2^{-1}\ampl{ki}{ac})(2\gtil{bjkc}-\gtil{bckj})\\
+%    &+\orbsum{d}\orbsum{l}[\ampl{kl}{ab}\ampl{ij}{cd}+\ampl{kj}{bd}\ampl{li}{ac}+2^{-1}\ampl{ki}{bd}\ampl{lj}{ac}+\ampl{ki}{ad}\ampl{lj}{bc}+2^{-1}\ampl{kj}{ad}\ampl{li}{bc}\\
+%    &+2\ampl{jl}{bd}\ampl{ik}{ac}-\ampl{jl}{bc}\ampl{ik}{ad}-\ampl{jl}{bd}\ampl{ki}{ac}-\ampl{lj}{bd}\ampl{ik}{ac}+2^{-1}\ampl{jl}{bc}\ampl{ki}{ad}+2^{-1}\ampl{lj}{bc}\ampl{ik}{ad}+2^{-1}\ampl{lj}{bd}\ampl{ki}{ac}-4^{-1}\ampl{lj}{bc}\ampl{ki}{ad}\\
+%    &+2\ampl{il}{ad}\ampl{jk}{bc}-\ampl{il}{ac}\ampl{jk}{bd}-\ampl{il}{ad}\ampl{kj}{bc}-\ampl{li}{ad}\ampl{jk}{bc}+2^{-1}\ampl{il}{ac}\ampl{kj}{bd}+2^{-1}\ampl{li}{ac}\ampl{jk}{bd}+2^{-1}\ampl{li}{ad}\ampl{kj}{bc}-4^{-1}\ampl{li}{ac}\ampl{kj}{bd}\\
+%    &-\ampl{ij}{ad}(2\ampl{lk}{bc}-\ampl{kl}{bc})-\ampl{ik}{ab}(2\ampl{lj}{dc}-\ampl{jl}{dc}))-\ampl{ji}{bd}(2\ampl{lk}{ac}-\ampl{kl}{ac})-\ampl{jk}{ba}(2\ampl{li}{dc}-\ampl{il}{dc})]\gtil{kcld}\}
+%  \end{split}
+%\end{equation}
 
-\begin{equation}
-  \begin{split}
-    \Omega_{ij}^{ab}&=\gtil{aibj}\\
-    &+\orbsum{c}[\ampl{ij}{ac}({\tilde h}_{bc}+\orbsum{k}2\gtil{bckk}-\gtil{bkkc})+\ampl{ji}{bc}({\tilde h}_{ac}+\orbsum{k}2\gtil{ackk}-\gtil{akkc})+\sum_d\ampl{ij}{cd}\gtil{acbd}]\\
-    &+\orbsum{k}[\ampl{ik}{ab}({\tilde h}_{kj}+\orbsum{l}2\gtil{kjll}-\gtil{kllj})+\ampl{jk}{ba}({\tilde h}_{ki}+\orbsum{l}2\gtil{kill}-\gtil{klli})+\sum_l\ampl{kl}{ab}\gtil{kilj}]\\
-    &+\orbsum{c}\orbsum{k}\{-2^{-1}\ampl{kj}{bc}\gtil{kiac}-\ampl{ki}{bc}\gtil{kjac}-2^{-1}\ampl{ki}{ac}\gtil{kjbc}-\ampl{kj}{ac}\gtil{kibc}\\
-    &+(\ampl{jk}{bc}-2^{-1}\ampl{kj}{bc})(2\gtil{aikc}-\gtil{acki})+(\ampl{ik}{ac}-2^{-1}\ampl{ki}{ac})(2\gtil{bjkc}-\gtil{bckj})\\
-    &+\orbsum{d}\orbsum{l}[\ampl{kl}{ab}\ampl{ij}{cd}+\ampl{kj}{bd}\ampl{li}{ac}+2^{-1}\ampl{ki}{bd}\ampl{lj}{ac}+\ampl{ki}{ad}\ampl{lj}{bc}+2^{-1}\ampl{kj}{ad}\ampl{li}{bc}\\
-    &+2\ampl{jl}{bd}\ampl{ik}{ac}-\ampl{jl}{bc}\ampl{ik}{ad}-\ampl{jl}{bd}\ampl{ki}{ac}-\ampl{lj}{bd}\ampl{ik}{ac}+2^{-1}\ampl{jl}{bc}\ampl{ki}{ad}+2^{-1}\ampl{lj}{bc}\ampl{ik}{ad}+2^{-1}\ampl{lj}{bd}\ampl{ki}{ac}-4^{-1}\ampl{lj}{bc}\ampl{ki}{ad}\\
-    &+2\ampl{il}{ad}\ampl{jk}{bc}-\ampl{il}{ac}\ampl{jk}{bd}-\ampl{il}{ad}\ampl{kj}{bc}-\ampl{li}{ad}\ampl{jk}{bc}+2^{-1}\ampl{il}{ac}\ampl{kj}{bd}+2^{-1}\ampl{li}{ac}\ampl{jk}{bd}+2^{-1}\ampl{li}{ad}\ampl{kj}{bc}-4^{-1}\ampl{li}{ac}\ampl{kj}{bd}\\
-    &-\ampl{ij}{ad}(2\ampl{lk}{bc}-\ampl{kl}{bc})-\ampl{ik}{ab}(2\ampl{lj}{dc}-\ampl{jl}{dc}))-\ampl{ji}{bd}(2\ampl{lk}{ac}-\ampl{kl}{ac})-\ampl{jk}{ba}(2\ampl{li}{dc}-\ampl{il}{dc})]\gtil{kcld}\}
-  \end{split}
-\end{equation}
-
+During the calculation the largest matrix is the $\tilde g$, the number of distinct elements is $\frac{n^4+n^2}{2}$, where $n$ is the number of orbitals (occupied and virtual).
+The second largest matrix is the $g$, whose number of distinct elements is $\frac{n^4}{8}+\frac{n^3}{4}+\frac{3n^2}{8}+\frac{n}{4}$.
+In the residual equations we can see each $\tilde g$ elements being used only once\footnote{$\gtil{iajb}$ is the only exception, but this term is not affected by the transformation (eq.~\ref{eq:t1g_iajb}) and, consequently, it is already saved in memory.}.
+This allow us to calculate a block of the total $\tilde g$ matrix use and erase it.
+In this case, the, common, largest block $\gtil{abcd}$ will have $\frac{n_v^4}{8}+\frac{n_v^3}{4}+\frac{3n_v^2}{8}+\frac{n_v}{4}$ unique elements, reducing the considerably the max amount of memory requires.
+Using these information, we can rewrite the doubles residual equation as:
+\begin{align}
+  \Omega_{ij}^{ab(A2')}&=\underline{\gtil{aibj}}\label{eq:omega_A2_prime}\\
+  \Omega_{ij}^{ab(A2'')}&=\orbsum{cd}\ampl{ij}{cd}\underline{\gtil{acbd}}\\
+  \Omega_{ij}^{ab(B2)}&=\orbsum{kl}\ampl{kl}{ab}\bigg(\underline{\gtil{kilj}}+\orbsum{cd}\ampl{ij}{cd}\g{kcld}\bigg)\\
+  \Omega_{ij}^{ab(C2)}&=-\frac{1}{4}\orbsum{ck}\ampl{kj}{bc}\bigg(2\underline{\gtil{kiac}}-\orbsum{dl}\ampl{li}{ad}\g{kdlc}\bigg)-\orbsum{ck}\ampl{ki}{bc}\bigg(\underline{\gtil{kjac}}-\orbsum{dl}\ampl{lj}{ad}\g{kdlc}\bigg)\label{eq:omega_C2_2}\\
+  \Omega_{ij}^{ab(D2)}&=\frac{1}{2}\orbsum{ck}\uampl{jk}{bc}\bigg(\underline{\Ltil{aikc}}+\frac{1}{2}\orbsum{dl}\uampl{il}{ad}\Lmat{ldkc}\bigg)\label{eq:omega_D2_2}\\
+  \Omega_{ij}^{ab(E2)}&=\orbsum{c}\ampl{ij}{ac}\bigg(\underline{\Ftil{bc}}-\orbsum{dkl}\uampl{ki}{bd}\g{ldkc}\bigg)-\orbsum{k}\ampl{ik}{ab}\bigg(\underline{\Ftil{kj}}+\orbsum{cdl}\uampl{lj}{cd}\g{kdlc}\bigg)\label{eq:omega_E2_2}
+\end{align}
+where $\Omega_{ij}^{ab(A2')}+\Omega_{ij}^{ab(A2'')}=\Omega_{ij}^{ab(A2)}$ (eq.~\ref{eq:omega_A2}) and the transformations needed are underlined.
+In the C2 term the two underline terms are the same.
+In total it is used four times, due to the permutation, eq.~\ref{eq:omega_double}.
 
 \subsection{Amplitudes update}
 \hypertarget{sec:ccsd_update}{}
@@ -274,7 +303,44 @@ Other way to open this equation is
   {\epsilon_a + \epsilon_b - \epsilon_i - \epsilon_j}
 \end{equation}
 
+\newpage
+\section{Data Management}
 
+\begin{table}[h!]
+  \centering
+  \begin{tabular}{c|c|c|c|c}
+    Matrix & Similar to    & Object & Min Size & Max Size\\
+    \hline
+    \ampl{ij}{ab}    & \uampl{ij}{ab}, $\Omega_{ij}^{ab}$ & np 1D array &$\frac{(n_o+1)*n_o}{2}*n_v^2$&$(n_o*n_v)^2$\\
+    \ampl{i}{a}      & $\Omega_{i}^{a}$ & np 1D array &$n_o*n_v$&$n_o*n_v$\\
+
+    \h{pq}      &\F{pq}      & ?? & $\frac{(n+1)*n}{2}$ &$n^2$ \\
+    \htil{pq}   &\Ftil{pq}   & ?? & $n^2$ &$n^2$ \\
+    \htil{ij}   &\Ftil{ij}   & ?? & $n_o^2$ &$n_o^2$ \\
+    \htil{ai}   &\Ftil{ai},\htil{ia},\Ftil{ia}   & ?? & $n_o*n_v$ &$n_o*n_v$ \\
+    \htil{ab}   &\Ftil{ab}   & ?? & $n_v^2$ &$n_v^2$ \\
+    \g{pqrs}    &\Lmat{pqrs} & ?? & $\frac{n^4}{8}+\frac{n^3}{4}+\frac{3n^2}{8}+\frac{n}{4}$ &$n^4$ \\
+    \gtil{pqrs}    &\Ltil{pqrs} & ?? & $\frac{n^4+n^2}{2}$ &$n^4$ \\
+    \gtil{ijkl}    &\Ltil{ijkl} & ?? & $\frac{n_o^4}{8}+\frac{n_o^3}{4}+\frac{3n_o^2}{8}+\frac{n_o}{4}$ &$n_o^4$ \\
+    \multirow{2}{*}{\gtil{ijka}}    &\Ltil{ijka},\gtil{ijak},\gtil{iajk},\gtil{aijk}, & \multirow{2}{*}{??} & \multirow{2}{*}{$n_o^3*n_v$} &\multirow{2}{*}{$n_o^3*n_v$} \\
+    &\Ltil{ijak},\Ltil{iajk},\Ltil{aijk} &  &  & \\
+    \multirow{2}{*}{\gtil{ijab}}    &\Ltil{ijab},\gtil{abij},\Ltil{abij} & \multirow{2}{*}{??} & \multirow{2}{*}{$n_o^2*n_v^2$} &\multirow{2}{*}{$n_o^2*n_v^2$} \\
+    &\Ltil{iabj},\gtil{aijb},\gtil{iabj},\Ltil{iabj}&  & & \\
+    \gtil{iajb}    &\Ltil{iajb},\gtil{aibj},\Ltil{aibj} & ?? & $\frac{n_o^2*n_v^2+n_o*n_v}{2}$ &$n_o^2*n_v^2$ \\
+    \multirow{2}{*}{\gtil{iabc}}    &\Ltil{iabc},\gtil{aibc},\gtil{abic},\gtil{abci}, & \multirow{2}{*}{??} & \multirow{2}{*}{$n_o*n_v^3$} &\multirow{2}{*}{$n_o*n_v^3$} \\
+                       &  \Ltil{aibc},\Ltil{abic},\Ltil{abci}           &  & & \\
+    \gtil{abcd}    &\Ltil{abcd} & ?? & $\frac{n_v^4}{8}+\frac{n_v^3}{4}+\frac{3n_v^2}{8}+\frac{n_v}{4}$ &$n_v^4$ \\
+  \end{tabular}
+\end{table}
+\begin{enumerate}
+\item{}$\Omega$ has the same structure as the amplitudes ($t$) and can be saved in the same object type;
+\item{}$g$ matrix is necessary during all calculation, but all $\tilde g$ blocks can be used one time and discarded;
+\item{}$h$ is used only to generate the inactive Fock matrix ($F^I$), before it can be deleted or stored in the HD;
+\item{}When needed calculate $L$ and transform it should be more efficient than transform the $\tilde g$ elements to calculate $\tilde L$;
+\item{}$u$ occupies a small space (if compared with $g$ and $\tilde g$) and is used in many steps. Save this matrix can reduce the operation number with a low memory cost;
+\item{}Equation~\ref{eq:t1g_aibj} results can be save directly in the $\Omega_{ij}^{ab}$ matrix, eq.~\ref{eq:omega_A2_prime};
+\item{}The terms in parenthesis in equations~\ref{eq:omega_C2_2}, \ref{eq:omega_D2_2} and \ref{eq:omega_E2_2} can be calculated overwriting the respective $\tilde g$ or $\tilde F^I$ matrices;
+\end{enumerate}
 
 \newpage
 \section{Flowchart}
