--- a/tasks.org
+++ b/tasks.org
@@ -2,6 +2,26 @@
 #+AUTHOR: Yuri Aoto
 
 
+* CC manifold
+
+** read WF from molpro
+
+*** interm norm 
+
+*** new fci
+
+** FCI from interm norm: compare and make tests
+
+** FCI and CCSD from molpro: compare
+
+** vertical projection of FCI for 2-electron system
+
+** min dist FCI for 2-electron system
+
+
+
+
+
 * Improvements
 
 ** Memory
