--- a/doc/grassmann_doc.tex
+++ b/doc/grassmann_doc.tex
@@ -1,3 +1,4 @@
+
 \documentclass[a4paper,12pt]{book}
 
 \input{preamble}
@@ -14,11 +15,14 @@
 \mainmatter
 \part{Using the program}
 
+
 \part{Theory and implementation}
 
-\input{dist_Gr}
+\input{code_org}
 
 \input{hartree_fock}
+
+\input{dist_Gr}
 
 \input{ccsd}
 
