--- a/doc/cc_man.tex
+++ b/doc/cc_man.tex
@@ -49,6 +49,8 @@ We receive as input this arbitrary wave function ($\Psi_0$) and we compare it wi
 of coupled-cluster wave functions ($\Psi_{CC}$).
 
 \section{The distance in the intermediate normalisation}
+\hypertarget{sec:dist_interm_norm}{}
+\label{sec:dist_interm_norm}
 
 Let $\Phi_0$ be our reference Slater determinant.
 Any state not orthogonal to $\Phi_0$ can be uniquely written in the intermediate normalisation as:
@@ -159,7 +161,7 @@ with the same double amplitudes as the coefficients of double excitations as in 
 
 The calculation of the vertical distance between $\Psi_0$ and the CCD manifold,
 as well as the check if the manifold curves towards $\Psi_0$,
-is made at \texttt{fci.WaveFunctionFCI.compare\_to\_CC\_manifold}.
+is made at \texttt{coupled\_cluster.dist\_to\_fci.vertical\_dist\_to\_cc\_manifold}.
 
 \subsection{The CCSD manifold}
 We will extend the ideas and equations discussed above to the CCSD manifold,
@@ -270,12 +272,19 @@ The Hessian, needed for a Newton optimisation:
 
 If these quantities are calculated, the Newton step is obtained as:
 \begin{equation}\label{eq:cc_minD_update}
-  \mathbf{t}_\text{new} =
-  \mathbf{t} - \left(\mathbf{H}(\mathbf{t})\right)^{-1}\mathbf{J}(\mathbf{t})\,.
+  \mathbf{t}_\text{new} = \mathbf{t} + \mathbf{z}\,,
 \end{equation}
-This is implemented at \texttt{wave\_functions.fci.WaveFunctionFCI.calc\_dist\_to\_CC\_manifold}.
+where
+\begin{equation}\label{eq:cc_minD_z}
+  \mathbf{z}
+  = - \left(\mathbf{H}(\mathbf{t})\right)^{-1}\mathbf{J}(\mathbf{t})
+  = - \left(\tfrac{1}{2}\mathbf{H}(\mathbf{t})\right)^{-1}
+  \left(\tfrac{1}{2}\mathbf{J}(\mathbf{t})\right)\,.
+\end{equation}
+This is implemented at \texttt{coupled\_cluster.dist\_to\_fci.calc\_dist\_to\_cc\_manifold}.
 What is more challenging, and time consuming, is the calculation of $\mathbf{J}(\mathbf{t})$ and
 $\mathbf{H}(\mathbf{t})$.
+This is done in\\ \texttt{coupled\_cluster.manifold.min\_dist\_jac\_hess}.
 
 \subsection{One possible approximation to the Hessian}
 \label{sec:cc_man_appr_hess}
@@ -297,19 +306,16 @@ where we used the fact that $\tau_\rho\tau_\rho = 0$
 It is not clear if this would be a good approximation
 (namely, that the off diagonal terms are indeed lower than the diagonal),
 but the simplicity suggests that it is worth trying.
-With this, the amplitudes update is:
-\begin{equation}\label{eq:cc_minD_update}
-  (t_\rho)_\text{new}
-  = t_\rho - \frac{J_\rho(\mathbf{t})}{H_{\rho\rho}(\mathbf{t})}
-  = t_\rho
-  - \frac{\mel{\Psi_{CC}(\mathbf{t}) - \Psi_0}{\tau_\rho}{\Psi_{CC}(\mathbf{t})}}
+With this:
+\begin{equation}\label{eq:cc_minD_z_diag}
+  z_\rho
+  = - \frac{J_\rho(\mathbf{t})}{H_{\rho\rho}(\mathbf{t})}
+  = - \frac{\mel{\Psi_{CC}(\mathbf{t}) - \Psi_0}{\tau_\rho}{\Psi_{CC}(\mathbf{t})}}
   {\mel{\Psi_{CC}(\mathbf{t})}{\tau_\rho^\dagger\tau_\rho}{\Psi_{CC}(\mathbf{t})}}\,.
 \end{equation}
 
-
-
 \newpage
-\subsection{Flowchart}
+\subsection{Flowchart: \texttt{coupled\_cluster.dist\_to\_fci.calc\_dist\_to\_cc\_manifold}}
 
 \input{cc_minD_flowchart}
 
