--- a/doc/cc_minD_flowchart.tex
+++ b/doc/cc_minD_flowchart.tex
@@ -13,35 +13,35 @@
 
   % ======
   \node (init)  at (\X{20}, \Y{-15})
-  [algstep, text width=\W{30}, hyperlink node=sec:]
+  [algstep, text width=\W{30}]
   {
     \textbf{Input}\vspT
-    {The $\Psi_0$ wave function in the intermediate normalisation}\vsp
+    {The $\Psi_0$ wave function in the intermediate normalisation and with ordered orbitals}\vsp
     {Initial $\Psi_{CC}$ wave function}\vsp
   };
   % ------
 
   % ======
-  \node (cc_wf)  at (\X{0}, \Y{0})
-  [algstep, text width=\W{55}, hyperlink node=sec:]
+  \node (cc_wf)  at (\X{0}, \Y{3})
+  [algstep, text width=\W{55}]
   {
     \textbf{$\Psi_{CC}$ as a FCI wave function}\vspT
     \texttt{fci.WaveFunctionFCI.from\_int\_norm}\vsp
+    {\scriptsize($\Psi_{CC}$ in FCI representation with ordered orbitals)}
   };
   % ------
 
   % ======
-  \node (dist)  at (\X{0}, \Y{15})
-  [algstep, text width=\W{50}]
+  \node (dist)  at (\X{0}, \Y{18})
+  [algstep, text width=\W{50}, hyperlink node=sec:dist_interm_norm]
   {
     \textbf{Distance between $\Psi_0$ and $\Psi_{CC}$}\vspT
-    \texttt{fci.WaveFunctionFCI.dist\_to}\vsp
-    {Eq.~\eqref{eq:dist_intem_norm}}\vsp
+    {Eq.~\eqref{eq:dist_intem_norm}, at \texttt{fci.WaveFunctionFCI.dist\_to}}\vsp
   };
   % ------
 
   % ======
-  \node (conv)  at (\X{0}, \Y{30})
+  \node (conv)  at (\X{0}, \Y{29})
   [algcond, text width=\W{35}]
   {
     \textbf{Converged?}\vspT
@@ -49,28 +49,20 @@
   };
   % ------
 
-  % ======
-  \node (app_hess)  at (\X{0}, \Y{40})
-  [algcond, text width=\W{40}, hyperlink node=sec:cc_man_appr_hess]
-  {
-    \textbf{Approximate Hessian?}\vspT
-  };
-  % ------
-
   
   % ================================================
-  \node (jachess) at (\X{25}, \Y{75})
-  [algmultistep, text width=\W{50}, hyperlink node=sec:dist_cc_man]
+  \node (jachess) at (\X{0}, \Y{60})
+  [algmultistep, text width=\W{60}, hyperlink node=sec:dist_cc_man]
   {
     \textbf{Set Jacobian and Hessian}\vspT
-    \begin{minipage}[t][5cm]{1.0\textwidth}
+    \begin{minipage}[t][7cm]{1.0\textwidth}
       \centering
-      \texttt{cc\_manifold.make\_min\_dist\_jac\_hess}
+      \texttt{cc\_manifold.min\_dist\_jac\_hess}
     \end{minipage}
   };
 
   % ======
-  \node (jac) at (\X{20}, \Y{70})
+  \node (jac) at (\X{0}, \Y{56})
   [algstep, text width=\W{30}]
   {
     \textbf{Set Jacobian, $\mathbf{J}_{\rho}$}\vspT
@@ -79,51 +71,48 @@
   % ------
 
   % ======
-  \node (hess) at (\X{30}, \Y{85})
-  [algstep, text width=\W{30}]
+  \node (hess) at (\X{0}, \Y{69})
+  [algstep, text width=\W{40}]
   {
     \textbf{Set Hessian, $\mathbf{H}_{\sigma\rho}$}\vspT
-    {Eq.~\eqref{eq:cc_minD_hess}}\vsp
+    {Eq.~\eqref{eq:cc_minD_hess}, running over all $\sigma$}\vsp
+    {Or, if approximate diagonal Hessian,\\
+      calculates directly Eq.~\eqref{eq:cc_minD_z_diag}}
   };
   % ------
   
   % ------------------------------------------------
 
-
-  % ================================================
-  \node (jachess_app) at (\X{-25}, \Y{75})
-  [algstep, text width=\W{40}, hyperlink node=sec:dist_cc_man]
+  % ======
+  \node (solve_z) at (\X{0}, \Y{89})
+  [algstep, text width=\W{30}]
   {
-    \textbf{Set $\mathbf{J}_{\rho}$, $\mathbf{H}_{\rho\rho}$}\vspT
-    \texttt{cc\_manifold.min\_dist\_app\_hess}\vsp
-    {Eq.~\eqref{eq:cc_minD_jac}}\vsp
-    {Eq.~\eqref{eq:cc_minD_update}}\vsp
+    \textbf{Find the update vector, $\mathbf{z}$}\vspT
+%%%    \texttt{interm\_norm.IntermNormWF.update\_amplitudes}\vsp
+    {Eq.~\eqref{eq:cc_minD_z}}
   };
-  
-  % ------------------------------------------------
-
+  % ------
   
   % ======
-  \node (update) at (\X{0}, \Y{105})
+  \node (update) at (\X{0}, \Y{101})
   [algstep, text width=\W{50}]
   {
-    \textbf{Update amplitudes}\vspT
+    \textbf{Update amplitudes, $\mathbf{t}_\text{new}$}\vspT
     \texttt{interm\_norm.IntermNormWF.update\_amplitudes}\vsp
     {Eq.~\eqref{eq:cc_minD_update}}
   };
   % ------
 
-  \draw [->] (init.270) -- (cc_wf.50);
+  \draw [->] (init.270) .. controls ++(270:0.9) and ++(90:0.9) .. (cc_wf.50);
   \draw [->] (cc_wf.270) -- (dist.90);
   \draw [->] (dist.270) -- (conv.90);
-  \draw [->, condNo] (conv.270) -- (app_hess.90);
-  \draw [->, condYes] (conv.0) -- (\X{30}, \Y{30});
-  \draw [->, condNo] (app_hess.0) .. controls +(right:1) and +(up:1) .. (jachess.90);
-  \draw [->, condYes] (app_hess.180) .. controls +(left:1) and +(up:1) .. (jachess_app.90);
-  \draw [->] (jachess.south) .. controls +(down:1) and +(east:1) .. (update.east);
-  \draw [->] (jachess_app.south) .. controls +(down:1) and +(west:1) .. (update.west);
+  \draw [->, condYes] (conv.0) -- (\X{30}, \Y{29});
+  \draw [->, condNo] (conv.270) -- (jachess.90);
+  \draw [->] (jachess.south) -- (solve_z.north);
+  \draw [->] (solve_z.south) -- (update.north);
+  \algloop{update.270}{109}{-10}{cc_wf.130}
 
-  \algloop{update.270}{115}{-10}{cc_wf.130}
+  \algloopsmall{hess.270}{79}{-25}{49}{jac.90}{Over all $\rho$}
 
 
 \end{tikzpicture}
