Start "Using the program" part

--- a/doc/cc_man.tex
+++ b/doc/cc_man.tex
@@ -279,6 +279,7 @@ What is more challenging, and time consuming, is the calculation of $\mathbf{J}(
 $\mathbf{H}(\mathbf{t})$.
 
 \subsection{One possible approximation to the Hessian}
+\hypertarget{sec:cc_man_appr_hess}{}
 \label{sec:cc_man_appr_hess}
 
 It is clear from the equations above that the calculation of the Hessian is the most time consuming.
