--- a/doc/grassmann_doc.tex
+++ b/doc/grassmann_doc.tex
@@ -14,6 +14,14 @@
 \mainmatter
 \part{Using the program}
 
+\input{requirements}
+
+\input{input}
+
+\input{output}
+
+\input{interfacing}
+
 \part{Theory and implementation}
 
 \input{dist_Gr}
@@ -23,6 +31,8 @@
 \input{ccsd}
 
 \input{cc_man}
+
+\input{references}
 
 \end{document}
 
